Archive2/54/a842036f5b0d72/output
main.cpp: In function 'int main()':
main.cpp:22:14: warning: ISO C++ forbids variable length array 'arr' [-Wvla]
     int arr[a];
              ^
main.cpp:23:8: error: invalid types 'int[int]' for array subscript
     a[9] = 1;
        ^
main.cpp:24:16: error: invalid types 'int[int]' for array subscript
     cout << a[9] << endl;
                ^
main.cpp:22:9: warning: unused variable 'arr' [-Wunused-variable]
     int arr[a];
         ^
